--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -527,4 +527,7 @@ Click "Yes" to download the new version.</value>
   <data name="MainContextMenu_Batch_AIUpscaleImage_QualityOnly" xml:space="preserve">
     <value>Quality-only</value>
   </data>
+  <data name="ExecutingAssemblyError_64BitRequired" xml:space="preserve">
+    <value>This is only available inder the x64 version of HaRepacker, please get the alternative version.</value>
+  </data>
 </root>
