--- a/HaRepacker/Properties/Resources.zh-CHS.resx
+++ b/HaRepacker/Properties/Resources.zh-CHS.resx
@@ -411,4 +411,7 @@
   <data name="MainContextMenu_Batch_AIUpscaleImage_QualityOnly" xml:space="preserve">
     <value>仅质量</value>
   </data>
+  <data name="ExecutingAssemblyError_64BitRequired" xml:space="preserve">
+    <value>This is only available inder the x64 version of HaRepacker, please get the alternative version.</value>
+  </data>
 </root>
