--- a/HaRepacker/Properties/Resources.zh-CHS.resx
+++ b/HaRepacker/Properties/Resources.zh-CHS.resx
@@ -343,7 +343,7 @@
     <value>选择保存XML的位置</value>
   </data>
   <data name="SelectWz" xml:space="preserve">
-    <value>选择WZ文件</value>
+    <value>选择WZ/ZLZ文件</value>
   </data>
   <data name="SelectWzImg" xml:space="preserve">
     <value>选择IMG文件</value>
