[HaReplacker] Display current selected custom encryption key in combobox

--- a/HaRepacker/Properties/Resources.ja.resx
+++ b/HaRepacker/Properties/Resources.ja.resx
@@ -370,7 +370,7 @@
     <value>これはHaRepackerのx86バージョンでのみ利用可能です。別のバージョンを入手してください。</value>
   </data>
   <data name="EncTypeCustom" xml:space="preserve">
-    <value>カスタム暗号化を使用する</value>
+    <value>カスタム暗号化を使用する（{0}）</value>
   </data>
   <data name="EncTypeGenerate" xml:space="preserve">
     <value>Bruteforce AESキー（生成）</value>
