--- a/HaRepacker/Properties/Resources.ko.resx
+++ b/HaRepacker/Properties/Resources.ko.resx
@@ -370,7 +370,7 @@
     <value>이것은 HaRepacker의 x86 버전에서만 사용할 수 있습니다. 대체 버전을 구해주세요.</value>
   </data>
   <data name="EncTypeCustom" xml:space="preserve">
-    <value>사용자 정의 암호화 사용</value>
+    <value>사용자 정의 암호화 사용 ({0})</value>
   </data>
   <data name="EncTypeGenerate" xml:space="preserve">
     <value>Bruteforce AES 키 (생성)</value>
