--- a/HaCreator/GUI/EditorPanels/ObjPanel.zh-CHT.resx
+++ b/HaCreator/GUI/EditorPanels/ObjPanel.zh-CHT.resx
@@ -118,36 +118,36 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ContextStripMenu_Delete" xml:space="preserve">
-    <value>Delete</value>
+    <value>刪除</value>
   </data>
   <data name="ContextStripMenu_AIUpscale" xml:space="preserve">
-    <value>AI-Upscale</value>
+    <value>AI放大</value>
   </data>
   <data name="SelectAnImageBefore" xml:space="preserve">
-    <value>Please select an object set, L0, and L1 category before adding an image.</value>
+    <value>請在新增圖像之前選擇物件集、L0和L1類別。</value>
   </data>
   <data name="SelectAnImageBeforeTitle" xml:space="preserve">
-    <value>Selection Required</value>
+    <value>需要選擇</value>
   </data>
   <data name="SelectAnImageToAdd" xml:space="preserve">
-    <value>Select an image to add</value>
+    <value>選擇要新增的圖像</value>
   </data>
   <data name="ImageAddSuccessful" xml:space="preserve">
-    <value>Image '{0}' has been added successfully as '{1}'.</value>
+    <value>圖像'{0}'已成功新增為'{1}'。</value>
   </data>
   <data name="ImageAddSuccessfulTitle" xml:space="preserve">
-    <value>Image Added</value>
+    <value>圖像已新增</value>
   </data>
   <data name="ConfirmItemDelete" xml:space="preserve">
-    <value>Are you sure you want to delete this item?</value>
+    <value>您確定要刪除此項目嗎？</value>
   </data>
   <data name="ConfirmItemDeleteTitle" xml:space="preserve">
-    <value>Confirm Delete</value>
+    <value>確認刪除</value>
   </data>
   <data name="ConfirmItemUpscale" xml:space="preserve">
-    <value>Are you sure you want to AI-upscale this item?</value>
+    <value>您確定要對此項目進行AI放大嗎？</value>
   </data>
   <data name="ConfirmItemUpscaleTitle" xml:space="preserve">
-    <value>Confirm upscale</value>
+    <value>確認放大</value>
   </data>
 </root>
